--- a/shunka-shop/.gitignore
+++ b/shunka-shop/.gitignore
@@ -1,3 +1,3 @@
 Pods/
 *.generated.swift
-*.xcworkspace/xcuserdata/*.xcuserdatad/UserInterfaceState.xcuserstate
+shunka-shop.xcworkspace/xcuserdata/
