--- a/shunka-shop/Podfile
+++ b/shunka-shop/Podfile
@@ -1,3 +1,6 @@
+source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/igordrljic/date-picker-ios.git'
+
 platform :ios, '14.4'
 
 target 'shunka-shop' do
